--- a/index.html
+++ b/index.html
@@ -44,30 +44,102 @@
 
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="/images/boardgames.jpg" class="d-block w-100 vh-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/dnd-dice.jpg" class="d-block w-100 vh-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/shop.jpg" class="d-block w-100 vh-100" alt="...">
-          </div>
+            <div class="carousel-item active">
+                <img src="/images/boardgames.jpg" class="d-block w-100 vh-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="/images/dnd-dice.jpg" class="d-block w-100 vh-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="/images/shop.jpg" class="d-block w-100 vh-100" alt="...">
+            </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
         </button>
-      </div>
+    </div>
+
+    <div class="about">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <h1>About Us</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-12">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat quisquam, exercitationem amet nesciunt autem laudantium vel sit vitae, tempore minus officiis corrupti ratione blanditiis iusto adipisci accusantium deleniti quibusdam voluptas.
+                </div>
+                <div class="col-md-6 col-12">
+                    <img src="/images/friends.jpg" alt="corner-image" class="w-50 h-250">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="news">
+        <div class="container-fluid">
+            <div class="rol">
+                <div class="col-12">
+                    <h1>News</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card mb-4" >
+                        <img src="/images/friends.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card mb-4" >
+                        <img src="/images/friends.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card mb-4" >
+                        <img src="/images/friends.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
 
 
     <!--JS stuff-->
