finished doing quick layout of landing page. details like id still need implement and padding.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!--Stylesheets-->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/fontawesome.min.css">
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <title>Document</title>
 </head>
 
@@ -83,7 +83,9 @@
             </div>
             <div class="row">
                 <div class="col-md-6 col-12">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat quisquam, exercitationem amet nesciunt autem laudantium vel sit vitae, tempore minus officiis corrupti ratione blanditiis iusto adipisci accusantium deleniti quibusdam voluptas.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat quisquam, exercitationem amet
+                    nesciunt autem laudantium vel sit vitae, tempore minus officiis corrupti ratione blanditiis iusto
+                    adipisci accusantium deleniti quibusdam voluptas.
                 </div>
                 <div class="col-md-6 col-12">
                     <img src="/images/friends.jpg" alt="corner-image" class="w-50 h-250">
@@ -101,7 +103,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <div class="card mb-4" >
+                    <div class="card mb-4">
                         <img src="/images/friends.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -113,7 +115,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <div class="card mb-4" >
+                    <div class="card mb-4">
                         <img src="/images/friends.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -125,7 +127,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <div class="card mb-4" >
+                    <div class="card mb-4">
                         <img src="/images/friends.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -139,7 +141,70 @@
         </div>
     </div>
 
-    
+    <div class="contact">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <h1>Contact Us</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-8">
+                    <h2>Let us know your questions and comments!</h2>
+                    <form>
+                        <div class="row">
+                            <div class="col">
+                                <div class="mb-3">
+                                    <label for="exampleInputEmail1" class="form-label">First Name</label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1"
+                                        aria-describedby="emailHelp">
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="mb-3">
+                                    <label for="exampleInputEmail1" class="form-label">Last Name</label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1"
+                                        aria-describedby="emailHelp">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1" class="form-label">Phone Number</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <div class="form-floating mb-3">
+                            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+                                style="height: 100px"></textarea>
+                            <label for="floatingTextarea2">Tell us your thoughts!</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+                <div class="col-md-4">
+                    <div class="row">
+                        <div class="col">
+                            <span><i class="fa fa-solid fa-location-dot"></i> San Francisco, CA 94126, USA</span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <span><i class="fa-solid fa-phone-flip"></i> 1-234-567-8900</span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <span><i class="fa-solid fa-envelope"></i> myRestaurant@dndthemes.com</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <!--JS stuff-->
