Added css styling to the landing page

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <!--Stylesheets-->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Rocksdale Cafe</title>
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">Rocksdale Cafe</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -54,12 +55,52 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="/images/boardgames.jpg" class="d-block w-100 vh-100" alt="...">
+                <div class="carousel-caption">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <h1>Lorem ipsum dolor sit amet consectetur adipisicing.</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque quos pariatur,
+                                    repellat
+                                    quod obcaecati cum reiciendis sunt quidem magni itaque nihil. Repellat similique
+                                    accusantiumx</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <div class="carousel-item">
                 <img src="/images/dnd-dice.jpg" class="d-block w-100 vh-100" alt="...">
+                <div class="carousel-caption">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <h1>Lorem ipsum dolor sit amet consectetur adipisicing.</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque quos pariatur,
+                                    repellat
+                                    quod obcaecati cum reiciendis sunt quidem magni itaque nihil. Repellat similique
+                                    accusantiumx</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="carousel-item">
                 <img src="/images/shop.jpg" class="d-block w-100 vh-100" alt="...">
+                <div class="carousel-caption">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <h1>Lorem ipsum dolor sit amet consectetur adipisicing.</h1>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque quos pariatur,
+                                    repellat
+                                    quod obcaecati cum reiciendis sunt quidem magni itaque nihil. Repellat similique
+                                    accusantiumx</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -74,21 +115,68 @@
         </button>
     </div>
 
+
     <div class="about">
         <div class="container-fluid">
             <div class="row">
                 <div class="col">
-                    <h1>About Us</h1>
+                    <h1>Open for business since 1989</h1>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 col-12">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat quisquam, exercitationem amet
-                    nesciunt autem laudantium vel sit vitae, tempore minus officiis corrupti ratione blanditiis iusto
-                    adipisci accusantium deleniti quibusdam voluptas.
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat quisquam, exercitationem amet
+                        nesciunt autem laudantium vel sit vitae, tempore minus officiis corrupti ratione blanditiis iusto
+                        adipisci accusantium deleniti quibusdam voluptas.</p>
+                    <button type="button" class="btn btn-main">Primary</button>
                 </div>
+                
                 <div class="col-md-6 col-12">
-                    <img src="/images/friends.jpg" alt="corner-image" class="w-50 h-250">
+                    <img src="/images/friends.jpg" alt="corner-image" class="w-100 h-250">
+                </div>
+                
+            </div>
+        </div>
+    </div>
+
+    <div class="event">
+        <div class="container-fluid">
+            <div class="rol">
+                <div class="col d-flex justify-content-center">
+                    <h1>Upcoming Events</h1>
+                </div>
+                <div class="col">
+                    <table class="table table-striped">
+                        <thead>
+                          <tr>
+                            <th scope="col">Room #</th>
+                            <th scope="col">Date & Time</th>
+                            <th scope="col">Title</th>
+                            <th scope="col">Description</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <th scope="row">1</th>
+                            <td>05/16/2022: 8am-10am</td>
+                            <td>DND 5e</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum unde non labore minima, laudantium praesentium at quasi quidem voluptatibus dolorem, veritatis laborum asperiores vitae eos officia ut. Odio, fugiat facilis!</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">2</th>
+                            <td>05/18/2022: 5pm-7pm</td>
+                            <td>MTG</td>
+                            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam odio sed quam velit? Iste, sequi qui a vitae sapiente reprehenderit voluptatibus, tempora non aut recusandae ut sit quos unde adipisci.</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">3</th>
+                            <td>05/24/2022: 8am-10am</td>
+                            <td>Anime Watching</td>
+                            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis tempora ex quam provident ratione velit. Totam repellat commodi iste odit, quos veritatis natus tempora quibusdam distinctio obcaecati omnis nostrum cumque.</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                      <a href="#" class="d-flex justify-content-end text-white">See more events ></a>
                 </div>
             </div>
         </div>
@@ -97,43 +185,43 @@
     <div class="news">
         <div class="container-fluid">
             <div class="rol">
-                <div class="col-12">
+                <div class="col-12 text-center">
                     <h1>News</h1>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-lg-4">
                     <div class="card mb-4">
                         <img src="/images/friends.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-main">Go somewhere</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-lg-4">
                     <div class="card mb-4">
                         <img src="/images/friends.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-main">Go somewhere</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-lg-4">
                     <div class="card mb-4">
                         <img src="/images/friends.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-main">Go somewhere</a>
                         </div>
                     </div>
                 </div>
@@ -149,7 +237,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-8 contact-form ">
                     <h2>Let us know your questions and comments!</h2>
                     <form>
                         <div class="row">
@@ -180,12 +268,12 @@
                         <div class="form-floating mb-3">
                             <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
                                 style="height: 100px"></textarea>
-                            <label for="floatingTextarea2">Tell us your thoughts!</label>
+                            <label for="floatingTextarea2" class="contact-label">Tell us your thoughts!</label>
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-main">Submit</button>
                     </form>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 contact-info ">
                     <div class="row">
                         <div class="col">
                             <span><i class="fa fa-solid fa-location-dot"></i> San Francisco, CA 94126, USA</span>
@@ -198,7 +286,7 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            <span><i class="fa-solid fa-envelope"></i> myRestaurant@dndthemes.com</span>
+                            <span><i class="fa-solid fa-envelope"></i> contactus@rocksdalecafe.com</span>
                         </div>
                     </div>
                 </div>
@@ -206,11 +294,26 @@
         </div>
     </div>
 
+    <footer class="text-center text-lg-start footer">
+        <!-- Copyright -->
+        <div class="text-center p-3">
+            © 2022 Copyright
+        </div>
+        <!-- Copyright -->
+    </footer>
 
     <!--JS stuff-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+    <!--
+            https://unsplash.com/photos/QuP5RL_E5oE?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink
+
+https://unsplash.com/photos/QuP5RL_E5oE?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink
+
+https://unsplash.com/photos/QuP5RL_E5oE?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink
+        -->
 </body>
 
 </html>
