added media breakpoints to reduce padding for smaller screens and prevent the containers from overflowing so it looks better on mobile

--- a/index.html
+++ b/index.html
@@ -119,22 +119,22 @@
     <div class="about">
         <div class="container-fluid">
             <div class="row">
-                <div class="col">
-                    <h1>Open for business since 1989</h1>
+                <div class="col-12">
+
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 col-12">
+                <div class="col-md-6 col-12 ">
+                    <h1>Open for business since 1989</h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat quisquam, exercitationem amet
-                        nesciunt autem laudantium vel sit vitae, tempore minus officiis corrupti ratione blanditiis iusto
+                        nesciunt autem laudantium vel sit vitae, tempore minus officiis corrupti ratione blanditiis
+                        iusto
                         adipisci accusantium deleniti quibusdam voluptas.</p>
-                    <button type="button" class="btn btn-main">Primary</button>
+                    <button type="button" class="btn btn-main">Learn more</button>
                 </div>
-                
                 <div class="col-md-6 col-12">
-                    <img src="/images/friends.jpg" alt="corner-image" class="w-100 h-250">
+                    <img src="/images/friends.jpg" alt="corner-image">
                 </div>
-                
             </div>
         </div>
     </div>
@@ -142,42 +142,51 @@
     <div class="event">
         <div class="container-fluid">
             <div class="rol">
-                <div class="col d-flex justify-content-center">
+                <div class="col d-flex align-items-center">
                     <h1>Upcoming Events</h1>
                 </div>
-                <div class="col">
+                <div class="col table-responsive d-flex align-items-center">
                     <table class="table table-striped">
                         <thead>
-                          <tr>
-                            <th scope="col">Room #</th>
-                            <th scope="col">Date & Time</th>
-                            <th scope="col">Title</th>
-                            <th scope="col">Description</th>
-                          </tr>
+                            <tr>
+                                <th scope="col">Room #</th>
+                                <th scope="col">Date & Time</th>
+                                <th scope="col">Title</th>
+                                <th scope="col" class="d-none d-lg-table-cell">Description</th>
+                            </tr>
                         </thead>
                         <tbody>
-                          <tr>
-                            <th scope="row">1</th>
-                            <td>05/16/2022: 8am-10am</td>
-                            <td>DND 5e</td>
-                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum unde non labore minima, laudantium praesentium at quasi quidem voluptatibus dolorem, veritatis laborum asperiores vitae eos officia ut. Odio, fugiat facilis!</td>
-                          </tr>
-                          <tr>
-                            <th scope="row">2</th>
-                            <td>05/18/2022: 5pm-7pm</td>
-                            <td>MTG</td>
-                            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam odio sed quam velit? Iste, sequi qui a vitae sapiente reprehenderit voluptatibus, tempora non aut recusandae ut sit quos unde adipisci.</td>
-                          </tr>
-                          <tr>
-                            <th scope="row">3</th>
-                            <td>05/24/2022: 8am-10am</td>
-                            <td>Anime Watching</td>
-                            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis tempora ex quam provident ratione velit. Totam repellat commodi iste odit, quos veritatis natus tempora quibusdam distinctio obcaecati omnis nostrum cumque.</td>
-                          </tr>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>05/16/2022: 8am-10am</td>
+                                <td>DND 5e</td>
+                                <td class="d-none d-lg-table-cell">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit. Dolorum unde non labore
+                                    minima, laudantium praesentium at quasi quidem voluptatibus dolorem, veritatis
+                                    laborum asperiores vitae eos officia ut. Odio, fugiat facilis!</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>05/18/2022: 5pm-7pm</td>
+                                <td>MTG</td>
+                                <td class="d-none d-lg-table-cell">Lorem, ipsum dolor sit amet consectetur adipisicing
+                                    elit. Ullam odio sed quam velit?
+                                    Iste, sequi qui a vitae sapiente reprehenderit voluptatibus, tempora non aut
+                                    recusandae ut sit quos unde adipisci.</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td>05/24/2022: 8am-10am</td>
+                                <td>Anime Watching</td>
+                                <td class="d-none d-lg-table-cell">Lorem, ipsum dolor sit amet consectetur adipisicing
+                                    elit. Reiciendis tempora ex quam
+                                    provident ratione velit. Totam repellat commodi iste odit, quos veritatis natus
+                                    tempora quibusdam distinctio obcaecati omnis nostrum cumque.</td>
+                            </tr>
                         </tbody>
-                      </table>
-                      <a href="#" class="d-flex justify-content-end text-white">See more events ></a>
+                    </table>
                 </div>
+                <div class="col"><a href="#" class=" text-white">See more events ></a></div>
             </div>
         </div>
     </div>
