added owner, employee meet containers. Added css

--- a/about.html
+++ b/about.html
@@ -76,20 +76,21 @@
     </div>
 
     <div class="owner">
-        <div class="container-fluid">
+        <div class="container-fluid image-container">
             <div class="row">
-                <div class="col-6">
-                    <img src="/images/jane-smith.jpg" alt="" class="w-100 h-60">
+                <div class="col-12 d-flex justify-content-center">
+                    <img src="/images/jane-smith.jpg" alt="">
                 </div>
-                <div class="col-6">
-                    <h1>Meet Jane Smith</h1>
-                    <h2>Lorem ipsum dolor</h2>
+            </div>
+            <div class="row-12">
+                <div class="col text-center">
+                    <h2>Meet Jane Smith</h2>
+                    <h3>Lorem ipsum dolor</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt sunt iusto doloremque,
                         suscipit voluptate quisquam, adipisci officia inventore tempora, nihil quod laudantium
                         voluptatibus ab facilis odio qui explicabo voluptates. Est.</p>
                 </div>
             </div>
-
         </div>
     </div>
 
@@ -97,29 +98,56 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col text-center">
-                    <h1>Meet the employees</h1>
+                    <h2>Meet the employees</h2>
                 </div>
             </div>
-            <div class="row text-center">
-                <div class="col">
-                    <img src="/images/employees.jpg" alt="" class="w-100 h-60">
-                    <h1>John Duck</h1>
-                    <p>Lorem ipsum</p>
+            <div class="row d-flex align-items-center striped py-4">
+                <div class="col-sm-4 text-center">
+                    <img src="/images/employees.jpg" alt="">
+                    <h3>John Duck</h3>
+                    <h4>lorem ipsum</h4>
                 </div>
-                <div class="col">
-                    <img src="/images/employees.jpg" alt="" class="w-100 h-60">
-                    <h1>John Duck</h1>
-                    <p>Lorem ipsum</p>
+                <div class="col-sm-8">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam voluptas sunt id laudantium
+                        corrupti vitae illum, eaque, velit aut repellat quisquam! Sequi rem quis minus, at soluta
+                        incidunt in dolorum.</p>
                 </div>
-                <div class="col">
-                    <img src="/images/employees.jpg" alt="" class="w-100 h-60">
-                    <h1>John Duck</h1>
-                    <p>Lorem ipsum</p>
+            </div>
+            <div class="row d-flex align-items-center py-4">
+                <div class="col-sm-8">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam voluptas sunt id laudantium
+                        corrupti vitae illum, eaque, velit aut repellat quisquam! Sequi rem quis minus, at soluta
+                        incidunt in dolorum.</p>
                 </div>
-                <div class="col">
-                    <img src="/images/employees.jpg" alt="" class="w-100 h-60">
-                    <h1>John Duck</h1>
-                    <p>Lorem ipsum</p>
+                <div class="col-sm-4 text-center">
+                    <img src="/images/employees.jpg" alt="">
+                    <h3>John Duck</h3>
+                    <h4>lorem ipsum</h4>
+                </div>
+            </div>
+            <div class="row d-flex align-items-center striped py-4">
+                <div class="col-sm-4 text-center">
+                    <img src="/images/employees.jpg" alt="">
+                    <h3>John Duck</h3>
+                    <h4>lorem ipsum</h4>
+
+                </div>
+                <div class="col-sm-8">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam voluptas sunt id laudantium
+                        corrupti vitae illum, eaque, velit aut repellat quisquam! Sequi rem quis minus, at soluta
+                        incidunt in dolorum.</p>
+                </div>
+            </div>
+            <div class="row d-flex align-items-center py-4">
+                <div class="col-sm-8">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam voluptas sunt id laudantium
+                        corrupti vitae illum, eaque, velit aut repellat quisquam! Sequi rem quis minus, at soluta
+                        incidunt in dolorum.</p>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img src="/images/employees.jpg" alt="">
+                    <h3>John Duck</h3>
+                    <h4>lorem ipsum</h4>
                 </div>
             </div>
         </div>
@@ -207,6 +235,7 @@
 
 <!--
    https://unsplash.com/photos/IF9TK5Uy-KI
+https://unsplash.com/photos/D1hFw0zEaKs
 
 -->
 
