Created event page, trying to add javascript to display the event details container when a table row is clicked

--- a/about.html
+++ b/about.html
@@ -25,10 +25,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link disabled" aria-current="page" href="#">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Events</a>
+                        <a class="nav-link" aria-current="page" href="events.html">Events</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="#">News</a>
@@ -60,17 +63,17 @@
 
     <div class="facts">
         <div class="row text-center">
-            <div class="col">
-                <h3>Most Played TTRPG</h3>
+            <div class="col border-end border-3">
                 <p>Pathfinder</p>
+                <h3>Most Played TTRPG</h3>
             </div>
-            <div class="col">
-                <h3>Games Run In-Store</h3>
+            <div class="col border-end border-3">
                 <p>65</p>
+                <h3>Games Run In-Store</h3>
             </div>
             <div class="col">
-                <h3>Preferred Class</h3>
                 <p>Artificer</p>
+                <h3>Preferred Class</h3>
             </div>
         </div>
     </div>
@@ -161,7 +164,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-8 contact-form ">
+                <div class="col-md-8 contact-form border-end border-3">
                     <h2>Let us know your questions and comments!</h2>
                     <form>
                         <div class="row">
