--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
+                        <a class="nav-link disabled" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link " aria-current="page" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="#">Events</a>
+                        <a class="nav-link " aria-current="page" href="events.html">Events</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " aria-current="page" href="#">News</a>
@@ -246,7 +249,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-8 contact-form ">
+                <div class="col-md-8 contact-form border-end border-3">
                     <h2>Let us know your questions and comments!</h2>
                     <form>
                         <div class="row">
