--- a/events.html
+++ b/events.html
@@ -170,8 +170,8 @@
                 </table>
             </div>
             <hr />
-            <div class="event-desc">
-                <div class="container-fluid">
+            <div class="event-desc" id="eventBlock">
+                <div class="container-fluid ">
                     <div class="row">
                         <div class="col">
                             <h1>
