adjusted some padding and when some decor shows up based on sizing

--- a/about.html
+++ b/about.html
@@ -47,13 +47,13 @@
     <div class="about">
         <div class="container-fluid">
             <div class="row">
-                <div class="col">
+                <div class="col-md-6">
                     <h1>About Rocksdale Cafe</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, iure sit molestias accusamus
                         optio in ex odio at? Molestias modi, corrupti fuga pariatur ducimus culpa repellendus harum
                         dicta a beatae.</p>
                 </div>
-                <div class="col">
+                <div class="col-md-6">
                     <img src="/images/shop.jpg" alt="">
                 </div>
             </div>
@@ -63,15 +63,15 @@
 
     <div class="facts">
         <div class="row text-center">
-            <div class="col border-end border-3">
+            <div class="col-md-4 fact-border">
                 <p>Pathfinder</p>
                 <h3>Most Played TTRPG</h3>
             </div>
-            <div class="col border-end border-3">
+            <div class="col-md-4 fact-border">
                 <p>65</p>
                 <h3>Games Run In-Store</h3>
             </div>
-            <div class="col">
+            <div class="col-md-4">
                 <p>Artificer</p>
                 <h3>Preferred Class</h3>
             </div>
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="row-12">
-                <div class="col text-center">
+                <div class="col-12 text-center">
                     <h2>Meet Jane Smith</h2>
                     <h3>Lorem ipsum dolor</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt sunt iusto doloremque,
@@ -164,7 +164,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-8 contact-form border-end border-3">
+                <div class="col-md-8 contact-form contact-border mb-5">
                     <h2>Let us know your questions and comments!</h2>
                     <form>
                         <div class="row">
@@ -200,7 +200,7 @@
                         <button type="submit" class="btn btn-main">Submit</button>
                     </form>
                 </div>
-                <div class="col-md-4 contact-info ">
+                <div class="col-md-4 contact-info d-grid gap-3">
                     <div class="row">
                         <div class="col">
                             <span><i class="fa fa-solid fa-location-dot"></i> San Francisco, CA 94126, USA</span>
