--- a/events.html
+++ b/events.html
@@ -233,7 +233,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-8 contact-form border-end border-3">
+                <div class="col-md-8 contact-form contact-border mb-5">
                     <h2>Let us know your questions and comments!</h2>
                     <form>
                         <div class="row">
@@ -269,7 +269,7 @@
                         <button type="submit" class="btn btn-main">Submit</button>
                     </form>
                 </div>
-                <div class="col-md-4 contact-info ">
+                <div class="col-md-4 contact-info d-grid gap-3">
                     <div class="row">
                         <div class="col">
                             <span><i class="fa fa-solid fa-location-dot"></i> San Francisco, CA 94126, USA</span>
