--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <div class="row">
                             <div class="col">
                                 <h1>Lorem ipsum dolor sit amet consectetur adipisicing.</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque quos pariatur,
+                                <p class="d-none d-sm-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque quos pariatur,
                                     repellat
                                     quod obcaecati cum reiciendis sunt quidem magni itaque nihil. Repellat similique
                                     accusantiumx</p>
@@ -80,7 +80,7 @@
                         <div class="row">
                             <div class="col">
                                 <h1>Lorem ipsum dolor sit amet consectetur adipisicing.</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque quos pariatur,
+                                <p class="d-none d-sm-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque quos pariatur,
                                     repellat
                                     quod obcaecati cum reiciendis sunt quidem magni itaque nihil. Repellat similique
                                     accusantiumx</p>
@@ -96,7 +96,7 @@
                         <div class="row">
                             <div class="col">
                                 <h1>Lorem ipsum dolor sit amet consectetur adipisicing.</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque quos pariatur,
+                                <p class="d-none d-sm-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque quos pariatur,
                                     repellat
                                     quod obcaecati cum reiciendis sunt quidem magni itaque nihil. Repellat similique
                                     accusantiumx</p>
@@ -249,7 +249,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-8 contact-form border-end border-3">
+                <div class="col-md-8 contact-form contact-border mb-5">
                     <h2>Let us know your questions and comments!</h2>
                     <form>
                         <div class="row">
@@ -285,7 +285,7 @@
                         <button type="submit" class="btn btn-main">Submit</button>
                     </form>
                 </div>
-                <div class="col-md-4 contact-info ">
+                <div class="col-md-4 contact-info d-grid gap-3">
                     <div class="row">
                         <div class="col">
                             <span><i class="fa fa-solid fa-location-dot"></i> San Francisco, CA 94126, USA</span>
