--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" aria-current="page" href="events.html">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">News</a>
+                        <a class="nav-link" aria-current="page" href="news.html">News</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="#">Shop</a>
