--- a/events.html
+++ b/events.html
@@ -35,7 +35,7 @@
                         <a class="nav-link disabled" aria-current="page" href="events.html">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">News</a>
+                        <a class="nav-link" aria-current="page" href="news.html">News</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="#">Shop</a>
